--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -14,7 +15,9 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "recoil": "^0.5.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
